--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -1,4 +1,9 @@
 extends ../layouts/base
- 
+
+
 block content
-    h1 Hello World
+
+    center Create your account <a href="signup"> here</a>.
+
+    center Access your account <a href="keystone/signin"> here</a>.
+
